# zCFD-driver

./: .coveragerc  CMakeLists.txt  LICENSE  README.md  fluent_convert.py  jupyter-password.py  launcher.py  list_variables.py  numa.py  pytest.ini  requirements-test.txt  requirements.txt  tox.ini  zClient.py  zCluster.py  zMQ.py  zMQ_connector.py  zMessage.py  zcfdUI.py  zcfdui_app.py
paraview/: DPW5.py  NACA0012.py  PlateBLAnalysis.py  SPEED.py  bolund.py  renderscript.py
tests/: test_cfl.py
zcfd/: zCFDSolver.py
zcfd/parameters/: __init__.py
zcfd/solvers/: DGEulerSolver.py  DGExplicitSolver.py  DGViscousSolver.py  EulerSolver.py  ExplicitSolver.py  MenterSSTSolver.py  TurbulentSolver.py  ViscousSolver.py  cfl.py
zcfd/solvers/utils/: DGNodalLocations.py  RungeKutta.py  RuntimeLoader.py  __init__.py
zcfd/utils/: ControlFile.py  Logger.py  Parameters.py  TimeSpent.py  XMLPretty.py  __init__.py  commandline.py  config.py
zplugin/: zMQplugin.py
zui/: utils.py  zcfdui.py
zutil/: ABL.py  __init__.py  farm.py  post.py
zutil/analysis/: __init__.py  data.py  get_case_dict.py
zutil/plot/: __init__.py  font.py  plot_report.py
